--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-pelican==4.6.0
-markdown==3.3.4
-beautifulsoup4==4.9.3
-webassets==2.0
+pelican
+markdown
+beautifulsoup4
+webassets
 typogrify
 markdown-captions
 markdown-checklist
-python-gettext==4.0
-pelican-webassets==2.0.0
-libsass==0.20.1
-cssmin==0.2.0
+python-gettext
+pelican-webassets
+cssmin
 pelican-jupyter
 notebook==5.6.0
-nbconvert==5.3.1
-tornado==5.1
-bokeh==2.3
-mistune==0.8.4
+nbconvert==5.6.0
+tornado
+bokeh
+mistune
