--- a/compose/pelican/Dockerfile
+++ b/compose/pelican/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update \
 
 
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
-RUN apt-get install -y nodejs
+RUN apt-get install -y npm nodejs
 
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
